cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_playlist_import_success@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: stdout
---
Daemon response:
playlist imported from {tempdir}/import_playlist.m3u
  {id}
