cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_queue_add_pipe_case_1_mixed@stderr.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stderr.0.clone()).unwrap()"
---

