cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_rand_command_case_2@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    ArtistBrief {
        id: RecordId {
            tb: "artist",
            id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
        },
        name: "Test Artist",
    },
)
