cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__handlers_smoke_tests_test_rand_command_case_3@stdout.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Some(
    SongBrief {
        id: RecordId {
            tb: "song",
            id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
        },
        title: "Test Song",
        artists: [
            "Test Artist",
        ],
        album_artists: [
            "Test Artist",
        ],
        album: "Test Album",
        genres: [
            "Test Genre",
        ],
        runtime: Duration {
            seconds: 180,
            nanos: 0,
        },
        track: Some(
            0,
        ),
        disc: Some(
            0,
        ),
        release_year: Some(
            2021,
        ),
        path: "test.mp3",
    },
)
